# snake-arena-live

./: .dockerignore  .env.example  .gitignore  ACCESS_INSTRUCTIONS.md  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  LIVE_MODE_STATUS.md  Makefile  README.Docker.md  README.Render.md  README.md  docker-compose.yml  entrypoint-unified.sh  index.html  nginx-unified.conf  package-lock.json  package.json  render.yaml  supervisord.conf  tailwind.config.ts
backend/: .dockerignore  .pre-commit-config.yaml  Dockerfile  entrypoint.sh  pyproject.toml  seed_data.py  snake_arena.db
backend/docs/: openapi.yaml
backend/integration_tests/: README.md  conftest.py  test_auth_integration.py  test_end_to_end.py  test_leaderboard_integration.py  test_live_players_integration.py
backend/src/: main.py
backend/src/api/: deps.py
backend/src/api/v1/: api.py
backend/src/api/v1/endpoints/: admin.py  auth.py  health.py  leaderboard.py  live_players.py
backend/src/core/: config.py  logging.py  security.py
backend/src/db/: database.py  models.py  session.py
backend/src/schemas/: auth.py  enums.py  game.py  user.py
backend/tests/: .gitignore  test_main.py
docs/: ARCHITECTURE.md  SECURITY.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AdminLayout.tsx  GameCanvas.tsx  GameControls.tsx  Header.tsx  Leaderboard.tsx  LiveIndicator.tsx  SpectatorView.tsx
frontend/src/components/interview/: CodeEditor.tsx  ExecutionOutput.tsx  ParticipantsList.tsx  ShareLink.tsx  VideoPanel.tsx
frontend/src/components/ui/: CyberCard.tsx  button.tsx
frontend/src/contexts/: AuthContext.tsx  InterviewAuthContext.tsx
frontend/src/hooks/: useCodeExecution.ts  useGameLogic.ts  useInterviewSession.ts  useLivePlayerCount.ts  useVideoCall.ts
frontend/src/integrations/supabase/: client.ts
frontend/src/pages/: AdminDashboard.tsx  AdminUsers.tsx  Index.tsx  InterviewAuthPage.tsx  InterviewDashboard.tsx  InterviewSession.tsx  JoinSession.tsx  LeaderboardPage.tsx  LoginPage.tsx  SpectatePage.tsx
frontend/src/services/: api.ts  mockApi.ts
frontend/src/tests/: App.test.tsx  gameLogic.test.ts  mockApi.test.ts  setup.ts
frontend/src/types/: game.ts
src/: App.tsx  index.css
src/components/: GameCanvas.tsx  GameControls.tsx  Header.tsx  Leaderboard.tsx  SpectatorView.tsx
src/hooks/: useGameLogic.ts
src/integrations/supabase/: types.ts
src/pages/: Index.tsx  SignupPage.tsx
src/services/: mockApi.ts
src/tests/: gameLogic.test.ts  mockApi.test.ts  setup.ts
src/types/: game.ts
supabase/: config.toml
supabase/migrations/: 20251226114210_95339bf7-a5c2-4e67-abb0-f4a687e30056.sql
